Updating readme with info to run locally

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+DISCORD_TOKEN=
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
@@ -9,7 +11,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=bookclubcrew
 DB_USERNAME=root
